Adopted MVVM pattern, included another test, and started to use protocol oriented programming to refactor the ArticleDownloader class

--- a/Power Up/Base.lproj/Main.storyboard
+++ b/Power Up/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -110,7 +110,7 @@
         <!--Detail View Controller-->
         <scene sceneID="eBQ-wg-3Ii">
             <objects>
-                <viewController storyboardIdentifier="detailViewController" id="uZA-ww-9PR" customClass="detailViewController" customModule="Power_Up" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="detailViewController" id="uZA-ww-9PR" customClass="DetailViewController" customModule="Power_Up" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Q3c-bn-ub7"/>
                         <viewControllerLayoutGuide type="bottom" id="VKl-iC-FeR"/>
